--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/lab": "^5.0.0-alpha.138",
+    "@mui/material": "^5.14.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
