--- a/package.json
+++ b/package.json
@@ -15,7 +15,19 @@
     "build:ssg": "tsc && SSG=true node --loader ts-node/esm ./src/vite-server.ts",
     "build:ssr": "tsc && vite build -c vite.config.ssr.ts",
     "build:api": "rm -rf .stormkit/api && node --loader ts-node/esm vite.config.api.ts",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,json,md}'"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx,js,jsx,json,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -38,10 +50,15 @@
     "@vitejs/plugin-react": "^4.0.0",
     "babel-jest": "^29.5.0",
     "dotenv": "^16.3.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "express": "^4.18.2",
     "glob": "^10.2.6",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "lint-staged": "^14.0.1",
     "nodemon": "^2.0.22",
+    "prettier": "^3.0.2",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.11.0",
     "ts-jest": "^29.1.0",
